# scapegoat

./: CHANGELOG.org  scapegoat.cabal
src/: Scapegoat.hs
src/Scapegoat/: Measured.hs
test/: ScapegoatSpec.hs
